# eth.build.desktop

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  coinmarketcap.key  package.json  pnpm-lock.yaml  task.md  todo.md
docs/: IMPLEMENTATION_SUMMARY.md  phase2-summary.md  phase3-summary.md
public/: index.html
socket/: index.js  pnpm-lock.yaml  proxy.js
solc/: README.md  compile.js  index.js  package.json  test-0.8.js
src/: App.js
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: accounts.rs  blocks.rs  config.rs  mining.rs  mod.rs  network.rs  price.rs  services.rs  solc.rs  transactions.rs
src-tauri/src/config/: mod.rs
src-tauri/src/ethereum/: faucet.rs  local_network.rs  mod.rs  types.rs
src-tauri/src/services/: mod.rs  port_manager.rs  process_manager.rs  service_manager.rs
src/components/ControlPanel/: AccountsPanel.css  AccountsPanel.jsx  BlockExplorer.css  BlockExplorer.jsx  ConfigPanel.css  ConfigPanel.jsx  FaucetPanel.css  FaucetPanel.jsx  MiningControl.css  MiningControl.jsx  NetworkStatus.css  NetworkStatus.jsx  ServicesPanel.css  ServicesPanel.jsx  index.css  index.jsx
src/components/Faucet/: index.css  index.jsx
src/components/TxExplorer/: index.css  index.jsx
src/dialogs/: SaveDialog.js
src/hooks/: useAccounts.js  useLocalNetwork.js  useTauri.js
src/lib/ipfs/: localNode.js
src/lib/tauri-api/: index.js
src/nodes/Components/: Chain.js  GasPrice.js  Price.js
src/nodes/Display/: Comment.js  Label.js  Title.js
src/nodes/Input/: Number.js  Password.js  Pin.js  Text.js
src/nodes/LocalNet/: AutoMine.js  BlockHeight.js  LocalAccounts.js  (+1 more)
src/utils/: socketConfig.js
(+10 files in other folders)
