[package]
name = "eth-build"
version = "0.1.0"
description = "ETH.Build Desktop - Web3可视化编程教育工具"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ethers = { version = "2.0", features = ["ws"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.0.0-rc.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
